[metadata]
name = dac8552
description = Python module for interfacing Texas Instruments SPI bus based analog- to-digital converters with the Raspberry Pi
url = https://github.com/ajax10g/dac8552
author = C. Pham
maintainer = C. Pham
maintainer_email = ajax10g-wr0@yahoo.com
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux

[options]
python_requires = >= 3.9
setup_requires =
    setuptools >= 38.3.0
install_requires = 
    pigpio
packages = find:


[versioneer]
VCS = git
style = pep440
versionfile_source = dac8552/_version.py
versionfile_build = dac8552/_version.py
tag_prefix =
parentdir_prefix = dac8552-
